tests/ui/closures/infer-signature-from-impl.next.stderr
error[E0282]: type annotations needed
  --> $DIR/infer-signature-from-impl.rs:17:16
   |
LL |     needs_foo(|x| {
   |                ^
LL |         x.to_string();
   |         - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
LL |     needs_foo(|x: /* Type */| {
   |                 ++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
